<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLight"
    tools:context=".Activity.NewSectionActivity">

    <ImageView
        android:id="@+id/back"
        android:padding="8dp"
        android:layout_margin="12dp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_back"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:text="@string/new_section"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="52dp"
        android:textStyle="bold"
        android:textSize="24dp"
        android:textColor="@color/colorDark"/>

    <EditText
        android:id="@+id/unique"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_section_unique"
        android:maxLines="1"
        android:maxLength="12"
        android:textColor="@color/colorDark"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_below="@id/title"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_section_name"
        android:maxLines="1"
        android:maxLength="42"
        android:textColor="@color/colorDark"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_below="@id/unique"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_section_description"
        android:textColor="@color/colorDark"
        android:maxLines="2"
        android:maxLength="72"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_below="@id/name"/>

    <EditText
        android:id="@+id/capacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_section_capacity"
        android:textColor="@color/colorDark"
        android:inputType="number"
        android:maxLines="1"
        android:maxLength="2"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_below="@id/description"/>

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_section_address"
        android:textColor="@color/colorDark"
        android:maxLines="1"
        android:maxLength="72"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_below="@id/capacity"/>

    <TextView
        android:id="@+id/instruction"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_section_instructions"
        android:textSize="8dp"
        android:textColor="@color/colorAccent"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_below="@id/title"/>

    <TextView
        android:id="@+id/complete"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/label_complete"
        android:gravity="center"
        android:background="@drawable/curve_button"
        android:layout_margin="12dp"
        android:layout_alignParentBottom="true"
        android:textStyle="bold"
        android:textSize="12dp"
        android:textColor="@color/colorLight"/>

</RelativeLayout>