<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLight"
    tools:context=".Activity.SectionReportActivity">

    <ImageView
        android:id="@+id/back"
        android:padding="8dp"
        android:layout_margin="12dp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_back"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:text="@string/label_reports"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="52dp"
        android:textStyle="bold"
        android:textSize="24dp"
        android:textColor="@color/colorDark"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_section_description"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:textSize="12dp"
        android:textColor="@color/colorDark"
        android:layout_below="@id/title"/>

    <TextView
        android:id="@+id/capacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_capacity"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="12dp"
        android:textSize="12dp"
        android:textColor="@color/colorOutline"
        android:layout_below="@id/address"/>

    <androidx.cardview.widget.CardView
        android:layout_below="@id/capacity"
        android:layout_above="@id/percent"
        card_view:cardBackgroundColor="@color/colorWhite"
        card_view:cardCornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:clickable="false"
        app:cardElevation="4dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:clickable="false"
            android:layoutAnimation="@anim/recycler_in_anim"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/section_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_section_unique"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="18dp"
        android:layout_marginBottom="12dp"
        android:textSize="8dp"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_section_description"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="4dp"
        android:textSize="8dp"
        android:textColor="@color/colorOutline"
        android:layout_below="@id/description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_occupied"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="12dp"
        android:textSize="8dp"
        android:textColor="@color/colorDark"/>

    <TextView
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_not_available"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="18dp"
        android:textStyle="bold"
        android:textSize="42dp"
        android:textColor="@color/colorAccent2"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="..."
        android:background="@color/colorAccent2"
        android:textColor="@color/colorWhite"
        android:textSize="12dp"
        android:textStyle="bold"
        android:elevation="8dp"
        android:padding="16dp"
        android:gravity="center" />

</RelativeLayout>