<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLight"
    tools:context=".Activity.FilterViewActivity">

    <ImageView
        android:id="@+id/back"
        android:padding="8dp"
        android:layout_margin="12dp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_back"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:text="@string/view_overall"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="52dp"
        android:textStyle="bold"
        android:textSize="24dp"
        android:textColor="@color/colorDark"/>

    <TextView
        android:id="@+id/details"
        android:layout_below="@id/deck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="..."
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="148dp"
        android:textSize="12dp"
        android:textColor="@color/colorAccent2"/>

    <LinearLayout
        android:id="@+id/spinners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2">

        <Spinner
            android:id="@+id/section_filter"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="12dp"
            android:spinnerMode="dropdown"/>

        <Spinner
            android:id="@+id/status_state"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="12dp"
            android:spinnerMode="dropdown"
            android:entries="@array/status_states"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/deck"
        android:layout_below="@id/title"
        card_view:cardBackgroundColor="@color/colorLight"
        card_view:cardCornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="8dp"
        android:clickable="false"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="4">

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="4dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_sections"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:textSize="12dp"
                    android:textColor="@color/colorDark"/>

                <TextView
                    android:id="@+id/total_sections"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="..."
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="24dp"
                    android:textStyle="bold"
                    android:textSize="24dp"
                    android:textColor="@color/colorDark"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="4dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_capacity"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:textSize="12dp"
                    android:textColor="@color/colorDark"/>

                <TextView
                    android:id="@+id/total_capacity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="..."
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="24dp"
                    android:textStyle="bold"
                    android:textSize="24dp"
                    android:textColor="@color/colorDark"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="4dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_available"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:textSize="12dp"
                    android:textColor="@color/colorDark"/>

                <TextView
                    android:id="@+id/total_available"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="..."
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="24dp"
                    android:textStyle="bold"
                    android:textSize="24dp"
                    android:textColor="@color/colorDark"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="4dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_occupied"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:textSize="12dp"
                    android:textColor="@color/colorDark"/>

                <TextView
                    android:id="@+id/total_occupied"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="..."
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="24dp"
                    android:textStyle="bold"
                    android:textSize="24dp"
                    android:textColor="@color/colorDark"/>

            </RelativeLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_sections"
        android:layout_below="@+id/deck"
        android:clickable="false"
        android:layoutAnimation="@anim/recycler_in_anim"
        android:layout_width="match_parent"
        android:layout_height="152dp"/>

    <androidx.cardview.widget.CardView
        android:layout_below="@id/details"
        android:layout_above="@id/spinners"
        card_view:cardBackgroundColor="@color/colorLight"
        card_view:cardCornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="-12dp"
        android:clickable="false"
        app:cardElevation="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_spaces"
            android:clickable="false"
            android:layoutAnimation="@anim/recycler_in_anim"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:visibility="gone"
        android:id="@+id/dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="..."
        android:background="@color/colorAccent2"
        android:textColor="@color/colorWhite"
        android:textSize="12dp"
        android:textStyle="bold"
        android:elevation="8dp"
        android:padding="16dp"
        android:gravity="center" />

</RelativeLayout>